cHORE:Add authorization to swagger
