# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\PostController;
@@ -16,12 +17,16 @@ use App\Http\Controllers\UserController;
 |
 */
 
+
+
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
 // Route::apiResource('posts', PostController::class);
 Route::get('/posts', [PostController::class, 'index']);
+
+Route::post("/auth/login",[AuthController::class,"login"]);
 
 Route::get('/users', [UserController::class, 'getUsers']);
 Route::post('/users', [UserController::class, 'createUsers']);
